feat: places CRUD
