# index.js
@@ -11,6 +11,7 @@ const cloudinary = require("cloudinary");
 const authRoutes = require("./routes/auth.routes");
 const userRoutes = require("./routes/users.routes");
 const buildingRoutes = require("./routes/buildings.routes");
+const placeRoutes = require("./routes/places.routes");
 
 //Error Handler middleware
 const ErrorHandler = require("./middleware/error");
@@ -48,6 +49,7 @@ app.get("/", (req, res) => {
 app.use("/api/v1/auth", authRoutes);
 app.use("/api/v1/users", userRoutes);
 app.use("/api/v1/buildings", buildingRoutes);
+app.use("/api/v1/places", placeRoutes);
 
 app.use(ErrorHandler);
 
