# routes/users.routes.js
@@ -1,11 +1,12 @@
 const express = require("express");
 const { registerDefinition } = require("swaggiffy");
-const { getAllUsers } = require("../controllers/users.controller");
+const { getAllUsers, getUser } = require("../controllers/users.controller");
 const { protect } = require("../middleware/auth");
 
 const router = express.Router();
 
 router.get("/", protect, getAllUsers);
+router.get("/:id", protect, getUser);
 
 registerDefinition(router, {
   tags: "Users",
